[package]
name = "the-number"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
